--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,41 @@
 nginx:
+    restart: always
     build: ./nginx
     links:
         - node1:node1
         - node2:node2
         - node3:node3
+        - jenkins
     ports:
         - "80:80"
 node1:
+    restart: always
     build: ./node
     links:
         - redis
     ports:
         - "8080"
 node2:
+    restart: always
     build: ./node
     links:
         - redis
     ports:
         - "8080"
 node3:
+    restart: always
     build: ./node
     links:
         - redis
     ports:
         - "8080"
 redis:
+    restart: always
     image: redis
     ports:
         - "6379"
+jenkins:
+    restart: always
+    image: jenkins
+    ports:
+        - "8080"
