--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,10 +10,10 @@ http {
 	      server node2:8080 weight=10 max_fails=3 fail_timeout=30s;
 	      server node3:8080 weight=10 max_fails=3 fail_timeout=30s;
 	}
-	 
+
 	server {
 	      listen 80;
-	 
+
 	      location / {
 	        proxy_pass http://node-app;
 	        proxy_http_version 1.1;
@@ -22,5 +22,17 @@ http {
 	        proxy_set_header Host $host;
 	        proxy_cache_bypass $http_upgrade;
 	      }
+	}
+
+	upstream jenkins-app {
+	    server jenkins:8080 weight=10 max_fails=3 fail_timeout=30s;
+	}
+	server {
+	    listen 80;
+	    server_name centos7-docker.local;
+
+	    location / {
+	        proxy_pass http://jenkins-app;
+	    }
 	}
 }
